fix a bug in InputStreamWrapper